# jam001

./: .gitignore  .gitmodules  README.md  document.tscn  explosion.tscn  formatted.html  icon.svg.import  index.html  main.gd  main.tscn  project.godot  simple.html
MauiBrowser/: MauiBrowser.sln  README.md
MauiBrowser/MauiBrowser/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MauiBrowser.csproj  MauiProgram.cs
MauiBrowser/MauiBrowser/Browser/: Constants.cs  HtmlSpec.cs
MauiBrowser/MauiBrowser/Controls/: BrowserView.cs
MauiBrowser/MauiBrowser/ViewModels/: MainPageViewModel.cs
MauiBrowser/MauiBrowser/Views/: MainPage.xaml  MainPage.xaml.cs
Stynx/: .gitignore  LICENSE  README.md
Stynx/Stynx/: CharStream.swift  HTMLParser.swift  Loader.swift  main.swift
Stynx/Stynx.xcodeproj/: project.pbxproj
adr/: README  README.md  bonus-html_to_plain_text.d  default.css  jambrowser.d
c89/: .gitignore  Makefile  README.md  browser.c
dfranx/: CMakeLists.txt  LICENSE  main.cpp
dfranx/inc/BrowserJam/: BoxedValue.h  BoxedValue.inl  Color.h  Cursor.h  DisplayType.h  Document.h  FontDescription.h  Point.h  Rect.h  Renderer.h  Style.h  StyleFactory.h  StyleProperty.h  TextSize.h  Thickness.h  Tools.h
dfranx/inc/BrowserJam/Elements/: PageElement.h  TextElement.h
dfranx/src/: Document.cpp  PageElement.cpp  Renderer.cpp  Style.cpp  StyleFactory.cpp  TextElement.cpp
eks-php-browser/: Dockerfile  apache-config.conf  compose.yml  composer.json  readme.md
eks-php-browser/public/: .htaccess  index.php
eks-php-browser/public/assets/: style.css  test.html  test_main.html
eks-php-browser/src/: ClickableArea.php  DomNode.php  HtmlToImageRenderer.php  HtmlToNodeTreeParser.php
eks-php-browser/src/Layout/: LayoutCalculator.php  LayoutNode.php  Rectangle.php
eks-php-browser/src/Style/: ComputedStyles.php  DomNodeStyleCalculator.php  NodeStylesBag.php  StyleResolver.php  UserAgentStyleResolver.php
eks-php-browser/templates/: error.html.twig  index.html.twig
emi/: icon.svg.import
flut/: README.md  pubspec.yaml
flut/android/app/: build.gradle
flut/ios/Runner/: Info.plist
flut/ios/Runner.xcodeproj/: project.pbxproj
flut/lib/: main.dart
flut/linux/: CMakeLists.txt  my_application.cc
flut/macos/Runner.xcodeproj/: project.pbxproj
flut/web/: index.html  manifest.json
flut/windows/: CMakeLists.txt
flut/windows/runner/: Runner.rc  main.cpp
glutbrowser/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cssparser.h  gluthelpers.h  htmlparser.h  jsparser.h  main.c
gosub/: README.md  shorthands.json  test.js
gosub/.github/workflows/: pr-author-check.yml
gosub/resources/: useragent2.css
gosub/tests/data/: __init__.py
htmlview/: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
htmlview/.helix/: languages.toml
htmlview/cmake/: arch.cmake
htmlview/src/: .clang-format  CMakeLists.txt
htmlview/src/embed/: CMakeLists.txt  embed.c  embed.h
htmlview/src/gpu/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  shaders.hlsl
htmlview/src/htmlview/: CMakeLists.txt  DOM.cpp  DOM.hpp  HTML.cpp  HTML.hpp  HTTP.cpp  HTTP.hpp  OS.hpp  OS_Win32.cpp  entry.cpp
htmlview/src/log/: CMakeLists.txt  log.c  log.h
htmlview/src/stb/: stb.c
htmlview/src/std/: Arena.c  Arena.h  Box.hpp  CMakeLists.txt  Check.c  Check.h  Chronometry.c  Chronometry.h  Hash.c  Hash.h  List.hpp  Slice.hpp  Sort.hpp  Types.h  Utils.cpp  Utils.hpp  Vector.hpp  vec.c  vec.h
htmlview/test/: test.html
ibilon/: LICENSE.md  README.md  build.hxml
ibilon/src/: Arranger.hx  Char.hx  Data.hx  Debug.hx  Lexer.hx  Main.hx  Parser.hx  Ui.hx  import.hx
icedtea/: build.zig  build.zig.zon
icedtea/src/: main.zig  parser.zig
illusion-browser/: README.md  main.odin  parse.odin  token.odin
illusion-browser/engine/: LICENSE  README.md  aabb.odin  animation.odin  audio.odin  camera.odin  draw.odin  light.odin  material.odin  model.odin  os_linux.odin  os_linux_input_event_codes.odin  os_windows.odin  physics.odin  shader.odin  text.odin  texture.odin  timer.odin  ui.odin  zephr.odin  zephr_math.odin
illusion-browser/engine/shaders/: color_chooser.frag  font.frag  font.vert  (+8 more)
jamcraft/: .gitignore  README.md  build.gradle.kts  gradle.properties
jamierocks/: .gitignore  LICENCE  README.md  go.mod  go.sum  http.go  main.go  renderer.go
jamierocks/css/: colours.go
jamierocks/dom/: document.go  element.go  parser.go  text.go
kale/: Cargo.toml  README.md  output.html
kale/pages/: motherfuckingwebsite.html  project.html  project2.html
kale/src/: dom.rs  html.pest  html.rs  main.rs  parser.rs  rendering.rs  styling.rs
lino-levan/: Cargo.toml  README.md
lino-levan/src/: main.rs  parse.rs  print.rs  renderer.rs  tokenize.rs
llmb/: Pipfile  README.md  main.py
mbkv/: README.md
ooga-booga/: README.md  input.html  main.c  meson.build  text.html
ooga-booga/subprojects/: raylib.wrap
python-minibrowser/: README  browser.py  imgui.nix  main.py  minihtml.py  run.sh  shell.nix  test.sh
python-minibrowser/tests/: test_html.py
scripts/: document.gd  dom.gd  layout.gd  parser.gd  physics_drag.gd  style.gd  token.gd
textures/: Concrete_019_BaseColor.jpg.import  Concrete_019_Normal.jpg.import
the_physical_web/: README.md  document3d.tscn  player.tscn  project.godot
the_physical_web/scripts/: document3d.gd  dom.gd  globals.gd  layout.gd  link.gd  parser.gd  physics_drag.gd  player.gd  toggle_gravity.gd  walking_mode_button.gd
tomashubelbauer/: .gitignore  fetchCached.ts  fitText.test.ts  fitText.ts  index.ts  isBlock.ts  isNonVisual.ts  layout.test.ts  layout.ts  package.json  parse.test.ts  parse.ts  readme.md  render.test.ts  render.ts
uamn/: .clang-format  .gitignore  Makefile  README.md  main.c  shell.nix
(+43 files in other folders)
