cmake_minimum_required(VERSION 3.22)
project(htmlview)
enable_testing()

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/")
include ("./cmake/arch.cmake")

set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(HV_ROOT ${CMAKE_BINARY_DIR}/_bin/)
set(HV_BIN_DIR ${HV_ROOT}/${MW_PLATFORM_ID}/)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${HV_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${HV_BIN_DIR}/Dbg)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${HV_BIN_DIR}/RelDbg)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${HV_BIN_DIR}/Rel)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${HV_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${HV_BIN_DIR}/Dbg)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${HV_BIN_DIR}/RelDbg)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${HV_BIN_DIR}/Rel)

if(NOT MSVC)
  add_compile_options(-fdiagnostics-color=always)
endif()

add_subdirectory(src)
