[package]
name = "lino-levan"
version = "0.1.0"
edition = "2021"

[dependencies]
glutin = "0.32.1"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
reqwest = { version = "0.11", features = ["blocking"] }
sdl2 = { version = "0.37.0", features = ["ttf"] }
winit = "0.30.5"
gl-rs = { version = "0.14.0", package = "gl"}
skia-safe = { version = "0.78.0", features = ["gl"] }
skia-bindings = "0.78.0"
